--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,9 @@
 .nav-item{
     margin-right: 40px;
 }
+.main-button{
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: white;
+}
