--- a/src/components/Account/Login.css
+++ b/src/components/Account/Login.css
@@ -19,7 +19,7 @@ label,input{
     margin-top: 20px;
     margin-bottom: 25px;
 }
-h6{
+.h6{
 margin-top: 40px;
 border: 1px solid green;
 margin-left: 100px;
